# my-opencv-experiment

./: .envrc  .gitignore  CMakeLists.txt  README.md  bootstrap.sh  env-setup.sh  vcpkg
src/: main.cpp
